compiler/testData/diagnostics/tests/annotations/DanglingInScript.kts
// FIR_IDENTICAL
// FILE: script.kts

annotation class Ann

@Ann<!SYNTAX!><!>